--- a/TDM-Client/public/index.css
+++ b/TDM-Client/public/index.css
@@ -71,12 +71,12 @@ button:focus-visible {
 
 
 input{
-  width: 3rem;
-  height: 1.5rem;
+  width: 2rem;
+  height: 2rem;
   border: 1px solid black;
   background: white ;
 
-  border-radius: .5rem;
+  border-radius: 2rem;
   box-shadow: 3px 3px black;
 }
 
