--- a/TDM-Client/src/index.css
+++ b/TDM-Client/src/index.css
@@ -71,13 +71,34 @@ button:focus-visible {
 
 
 input{
-  width: 3rem;
-  height: 1.5rem;
-  border: 1px solid black;
-  background: white ;
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid transparent;
+  background: rgb(238, 238, 238) ;
 
   border-radius: .5rem;
-  box-shadow: 3px 3px black;
+  border: 1px solid rgb(190, 190, 190);
+  /* box-shadow: 3px 3px black; */
+  padding: 0;
+  margin: 0;
+}
+input:focus{
+  border-color: #535bf2;
+}
+td{
+  margin: 0;
+  padding: 0;
+}
+th{
+  width: 4rem;
+  font-weight: 400;
+  /* color: #535bf2; */
+}
+
+.vote{
+
+  text-align: center;
+  font-size: 2rem;
 }
 
 .table{
@@ -86,5 +107,71 @@ input{
   border-radius: 1rem;
   border: 1px solid rgb(190, 190, 190);
   box-shadow: 0px 0px 10rem rgba(0, 0, 0, 0.096);
+  max-width: 23rem;
 
+}
+
+.score{
+  padding-left: 0rem;
+}
+
+.del{
+
+  position: relative;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  background: #ca6969;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+
+  color: white;
+
+  font-size: 1rem;
+  opacity: 0.2;
+
+  
+
+}
+
+.del:hover{
+  opacity: 1;
+}
+
+.info{
+  width: 70%;
+}
+
+form{
+  display: flex;
+  gap: 1rem;
+  margin: 1rem;
+}
+
+.New-Item{
+  width: 8rem;
+  height: 2rem;
+
+}
+.Item-Submit{
+  width: 7rem;
+  height: 2rem;
+  background: rgb(43, 166, 214) ;
+  color: #f0ede6;
+  padding: .5rem;
+  
+}
+
+.Item-Submit:hover{
+
+  background: rgb(27, 108, 139) ;
+  cursor: pointer;
+
+  
 }
